# learning-system-programming

./: .gitignore  README.md  mkdocs.yml
codes/assembly/pro/: README.txt
codes/assembly/pro/ch04_cpuid/: Makefile  cpuid.s  cpuid_32_c.s  cpuid_64_c.s  edianness.s  runs.txt
codes/assembly/pro/ch05_data_movement/: Makefile  ex01_size1.s  ex01_size2.s  ex01_size3.s  ex02_mem_to_reg.s  ex03_reg_to_mem.s  ex04_indexed_mem_loc.s  ex05_indirect_addressing.s  ex06_cmov.s  ex07_bswap.s  ex08_cmpxchg.s  ex09_cmpxchg8b.s  ex10_bubble.s  ex11_push_pop.s  runs.txt
codes/assembly/risc-v/: Makefile  README.txt  common.mk
codes/assembly/step/: README.txt
codes/c/apue/: .gitignore  Makefile  README.txt  common.mk  systype.sh
codes/c/apue/ch07/: Makefile  (+8 more)
codes/c/core/: Makefile  README.txt  common.mk
codes/c/tlpi/: README.txt
codes/cmake/mastering/ch12/tutorial/: CMakeLists.txt  tutorial.cxx
codes/cmake/mastering/ch12/tutorial/MathFunctions/: CMakeLists.txt  MakeTable.cxx  MathFunctions.h  mysqrt.cxx
codes/cpp/CP5/: CMakeLists.txt  README.txt
codes/cpp/CP5/ch01/: CMakeLists.txt  runs.txt  test_Sales_item.cc
codes/cpp/CP5/ch02/: CMakeLists.txt  runs.txt  test_Sales_data.cc
codes/cpp/CP5/ch15/: CMakeLists.txt  Quote.h  test_Quote.cc
codes/cpp/CP5/lib/: Sales_data.h
codes/cpp/PPP2/: .gitignore  CMakeLists.txt  README.txt
codes/cpp/PPP2/appendix_d/: CMakeLists.txt  ex_fltk.cc
codes/cpp/PPP2/ch02/: CMakeLists.txt  detect_repeated_words.cc  ex_vector.cc  hello_world.cc  operators.cc  read_name_age.cc  runs.txt
codes/cpp/PPP2/ch06/: CMakeLists.txt  calculator.cc  runs.txt
codes/cpp/PPP2/ch07/: CMakeLists.txt  calculator.cc  runs.txt
codes/cpp/PPP2/ch09/: CMakeLists.txt  Chrono.cc  Chrono.h  runs.txt  test_Chrono.cc
codes/cpp/PPP2/ch10/: CMakeLists.txt  get_input.cc  punct_stream.cc  r_struct_file.cc  runs.txt  rw_error.cc  rw_file.cc
codes/cpp/PPP2/ch12/: CMakeLists.txt  ex_shape.cc
codes/cpp/PPP2/ch13/: CMakeLists.txt  ex01_line.cc  ex02_lines.cc  ex03_color.cc  ex04_line_style.cc  ex05_open_polyline.cc  ex06_closed_polyline.cc  ex07_polygon.cc  ex08_rectangle.cc  ex09_unnamed_objects.cc  ex10_text.cc  ex11_circle.cc  ex12_ellipse.cc  ex13_marked_polyline.cc  ex14_marks.cc  ex15_mark.cc  ex16_image.cc  runs.txt  template.cc.txt
codes/cpp/PPP2/ch14/: CMakeLists.txt  ex_overriding.cc  runs.txt
codes/cpp/PPP2/ch15/: CMakeLists.txt  ex01_simple_function.cc  ex02_function.cc  ex03_approximation.cc  ex04_graphing_data.cc
codes/cpp/PPP2/ch17/: CMakeLists.txt  ex01_sizeof.cc  ex02_lists.cc  runs.txt
codes/cpp/PPP2/ch18/: CMakeLists.txt  ex_access_elem.cc  ex_cons_des.cc  ex_copy1.cc  ex_copy2.cc  ex_move.cc  ex_palindrome.cc  runs.txt
codes/cpp/PPP2/ch19/: CMakeLists.txt  ex_changing_size.cc  runs.txt
codes/cpp/PPP2/ex_antlr/: CMakeLists.txt  Calculator.g4  runs.txt  test_Calculator.cc
codes/cpp/PPP2/lib/: funcs.h  std_lib_facilities.h
codes/cpp/PPP2/lib/graph/: CMakeLists.txt  GUI.cc  GUI.h  Graph.cc  Graph.h  Point.h  Simple_window.h  Window.cc  Window.h
codes/cpp/PPP2/uxf/: Graphics.uxf  README.txt
codes/cpp/cpp-concurrency/: CMakeLists.txt  README.txt
codes/cpp/cpp-concurrency/ch01/: CMakeLists.txt  Makefile  hello_world.cc  runs.txt
codes/cpp/cpp-concurrency/ch02/: Makefile  launch_thd.cc
codes/cpp/cpp-concurrency/ch03/: Makefile  ex_mutex.cc  runs.txt  test_stack_s.cc
codes/cpp/cpp-concurrency/lib/: CMakeLists.txt  log.h  stack_s.h  thd.h
codes/gnu/gcc/: README.txt
codes/gnu/make/: README.txt
codes/low-level/: Makefile  README.txt  common-c.mk  common.mk
codes/low-level/ch02/: Makefile  endianness.asm  hello.asm  print_call.asm  print_rax.asm  runs.txt  strlen.asm  test_lib.asm
codes/low-level/ch03/: Makefile  risc_cisc.asm  runs.txt
codes/low-level/ch04/: Makefile  mappings_loop.asm  mmap.asm  runs.txt  segfault_badaddr.asm
codes/low-level/ch05/: define_cat_count.asm  defines.asm  defining_in_cla.asm  macro_arg_types.asm  macro_asm_parts.asm  macroif.asm  prime.asm  pushr.asm  rep.asm  runs.txt
codes/low-level/ch09/: Makefile  anon.c  c_inclusion.c  c_overload.c  c_parametric_polymorphism.c  enum_example.c  macro_concat.c  macro_str.c  runs.txt  struct_anon.c  struct_init.c  struct_named.c  struct_namespace.c  struct_typedef.c  union_example.c
codes/low-level/lib/: Makefile  lib.asm  syscall.inc
codes/make/: README.txt
codes/make/ch02/: runs.txt
codes/os/Orange/: REAME.txt
docs/: index.md
docs/architecture/: ABI.md  CAQA-appendix.md  CAQA.md  Low-Level-Programming.md  index.md  linux-cpu-architecture.md
docs/architecture/intel/: vol1-basic-architecture.md  vol3a-system-programming-guide.md  vol3b-system-programming-guide.md
docs/architecture/risc-v/: risc-v-cheatsheet.md  risc-v-instructions.md  risc-v-simulators.md  risc-v-unprivileged-spec.md  the-risc-v-reader.md
docs/assembly/: assembly-step-by-step.md  index.md  instructions.md  introduction-with-risc-v.md  nasm.md  pro-assembly.md
docs/assembly/images/: assembly.gliffy
docs/assembly/introduction-with-risc-v/: I  II  III  fingure.uxf
docs/c/: c-headers.md  index.md
docs/cpp/: cpp_concurrency.md  cpp_primer_plus.md  index.md
docs/cpp/CP5/: CP5-1-The-Basics.md  CP5-2-The-Cpp-Library.md  CP5-3-Tools-for-class-authors.md  CP5-4-Advanced-Topics.md  CP5.md
docs/cpp/PPP2/: PPP2-1-The-Basics.md  PPP2-2-Input-and-Output.md  PPP2-3-Data-and-Algorithms.md  PPP2-4-Broadening-the-View.md  PPP2-5-Appendices.md  PPP2.md
docs/kernel/: index.md  linux-0.11.md  linux-ref-spec.md  linux-standard-base.md  tlpi.md
docs/kernel/kernel-dev/: kernel-dev.md  kernel-dev1.md  kernel-dev2.md
docs/kernel/linux-arch/: linux-0.11.md  linux-arch.md
docs/kernel/network/: netty.md
docs/kernel/programming/: apue.md  syscall.md  tlpi.md
docs/patterns/GoF/: legend.uxf
docs/tools/: index.md  ninja.md
docs/tools/gnu/: gcc-analysis.md  gcc-intro.md  gnu-glibc.md  gnu-make.md  gnu-toolchain.md  make.md  managing-projects-with-gnu-make.md
docs/tools/llvm/: llvm-core-libraries.md  llvm-essentials.md  llvm.md
docs/tools/programming/: c-tool.md  cpp-tool.md
(+429 files in other folders)
